Use a read-only manual (.tar.gz) installation of Tomcat 7 on the CI platform, instead of the running tomcat7 Debian package.

--- a/unm-mobileweb-it/pom.xml
+++ b/unm-mobileweb-it/pom.xml
@@ -159,7 +159,7 @@
 			<properties>
 				<cargo.containerId>tomcat7x</cargo.containerId>
 				<cargo.home>
-					/var/lib/tomcat7/
+					/opt/apache-tomcat-7.0.39
 				</cargo.home>
 			</properties>
 		</profile>
