Move UnivMobileHttpUtils.java from unm-mobileweb-app to unm-webapp-commons

--- a/unm-mobileweb-app/pom.xml
+++ b/unm-mobileweb-app/pom.xml
@@ -12,6 +12,14 @@
 		<relativePath/>
 	</parent>
 
+	<dependencies>
+		<dependency>
+			<groupId>fr.univmobile</groupId>
+			<artifactId>unm-webapp-commons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
+	
 	<build>
 		<finalName>unm-mobileweb</finalName>
 		<plugins>
