--- a/unm-mobileweb-app-local/pom.xml
+++ b/unm-mobileweb-app-local/pom.xml
@@ -168,7 +168,7 @@
 		<profile>
 			<id>dandriana</id>
 			<properties>
-				<baseURL>http://localhost:8080/unm-mobileweb/</baseURL>
+				<baseURL>http://192.168.0.40:8080/unm-mobileweb/</baseURL>
 			</properties>
 		</profile>
 		<profile>
