--- a/unm-mobileweb-app/pom.xml
+++ b/unm-mobileweb-app/pom.xml
@@ -19,27 +19,7 @@
 		</dependency>
 		<dependency>
 			<groupId>fr.univmobile</groupId>
-			<artifactId>unm-backend-core</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>fr.univmobile</groupId>
-			<artifactId>unm-commons-datasource</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>fr.univmobile</groupId>
-			<artifactId>unm-backend-client-api</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>fr.univmobile</groupId>
-			<artifactId>unm-backend-client-jsonapi</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>fr.univmobile</groupId>
-			<artifactId>unm-backend-client-json</artifactId>
+			<artifactId>unm-mobileweb-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
