Fix: dataDir is of type java.io.File, not java.lang.String

--- a/unm-mobileweb-app-local/src/main/webapp/WEB-INF/web.xml
+++ b/unm-mobileweb-app-local/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 			<param-value>${baseURL}</param-value>
 		</init-param>
 		<init-param>
-			<param-name>inject:String ref:dataDir</param-name>
+			<param-name>inject:File ref:dataDir</param-name>
 			<param-value>/tmp/unm-backend/dataDir/regions</param-value>
 		</init-param>
 		<init-param>
