--- a/unm-mobileweb-app-local/src/main/webapp/WEB-INF/web.xml
+++ b/unm-mobileweb-app-local/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 		<load-on-startup>1</load-on-startup>
 		<init-param>
 			<param-name>baseURL</param-name>
-			<param-value>${baseURL}</param-value>
+			<param-value>http://localhost:8380/unm-mobileweb/</param-value>
 		</init-param>
 		<init-param>
 			<param-name>inject:File ref:dataDirRegions</param-name>
