--- a/unm-mobileweb-app/src/main/webapp/WEB-INF/web.xml
+++ b/unm-mobileweb-app/src/main/webapp/WEB-INF/web.xml
@@ -11,11 +11,11 @@
 		<load-on-startup>1</load-on-startup>
 		<init-param>
 			<param-name>baseURL</param-name>
-			<param-value>${baseURL}</param-value>
+			<param-value>http://localhost:8380/unm-mobileweb/</param-value>
 		</init-param>
 		<init-param>
 			<param-name>inject:String ref:jsonURL</param-name>
-			<param-value>http://localhost:8080/unm-backend/json/</param-value>
+			<param-value>http://localhost:8380/unm-backend/json/</param-value>
 		</init-param>
 		<init-param>
 			<param-name>inject-packages</param-name>
