--- a/unm-mobileweb-it/pom.xml
+++ b/unm-mobileweb-it/pom.xml
@@ -15,11 +15,23 @@
 		<dependency>
 			<groupId>fr.univmobile</groupId>
 			<artifactId>unm-it-commons</artifactId>
-		</dependency>	
+		</dependency>
+		<dependency>
+			<groupId>fr.univmobile</groupId>
+			<artifactId>unm-backend-app</artifactId>
+			<type>war</type>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>fr.univmobile</groupId>
 			<artifactId>unm-mobileweb-app</artifactId>
 			<type>war</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>fr.univmobile</groupId>
+			<artifactId>unm-backend-it-data</artifactId>
+			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -66,6 +78,14 @@
 					<deployables>
 						<deployable>
 							<groupId>fr.univmobile</groupId>
+							<artifactId>unm-backend-app</artifactId>
+							<type>war</type>
+							<properties>
+								<context>/unm-backend</context>
+							</properties>
+						</deployable>
+						<deployable>
+							<groupId>fr.univmobile</groupId>
 							<artifactId>unm-mobileweb-app</artifactId>
 							<type>war</type>
 							<properties>
@@ -74,6 +94,39 @@
 						</deployable>
 					</deployables>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>unpack</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>fr.univmobile</groupId>
+									<artifactId>unm-mobileweb-app</artifactId>
+									<type>war</type>
+									<overWrite>true</overWrite>
+									<outputDirectory>${project.build.directory}/unm-mobileweb-app</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>fr.univmobile</groupId>
+									<artifactId>unm-backend-app</artifactId>
+									<type>war</type>
+									<overWrite>true</overWrite>
+									<outputDirectory>${project.build.directory}/unm-backend-app</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+							<overWriteReleases>true</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
