--- a/unm-mobileweb-app-local/src/main/webapp/WEB-INF/web.xml
+++ b/unm-mobileweb-app-local/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,10 @@
 			<param-value>RegionClientFromLocal</param-value>
 		</init-param>
 		<init-param>
+			<param-name>inject:String into:RegionJSONClientImpl</param-name>
+			<param-value>(dummy baseURL)</param-value>
+		</init-param>
+		<init-param>
 			<param-name>inject:RegionDataSource into:RegionClientFromLocal</param-name>
 			<param-value>factory:BackendDataSourceFileSystem:regions</param-value>
 		</init-param>
