Fix: Use jsonURL as a XSLT param for repackage_war.sh

--- a/unm-mobileweb-app/build.xml
+++ b/unm-mobileweb-app/build.xml
@@ -3,6 +3,7 @@
 	<property name="warFile" location="target/unm-mobileweb.war"/>
 	<property name="dataDir" value="/tmp/unm-mobileweb/data"/>
 	<property name="baseURL" value="http://localhost:8080/unm-mobileweb/"/>
+	<property name="jsonURL" value="http://localhost:8080/unm-backend/json"/>
 	
 	<target name="repackage_war">
 	
@@ -15,6 +16,7 @@
 				out="target/unm-mobileweb/WEB-INF/web.xml-repackaged">
 			<param name="dataDir" expression="${dataDir}"/>
 			<param name="baseURL" expression="${baseURL}"/>
+			<param name="jsonURL" expression="${jsonURL}"/>
 		</xslt>
 		
 		<move overwrite="true" tofile="target/unm-mobileweb/WEB-INF/web.xml"
