--- a/unm-mobileweb-app/pom.xml
+++ b/unm-mobileweb-app/pom.xml
@@ -26,6 +26,12 @@
 	
 	<build>
 		<finalName>unm-mobileweb</finalName>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
