--- a/unm-mobileweb-core/pom.xml
+++ b/unm-mobileweb-core/pom.xml
@@ -12,30 +12,29 @@
 	</parent>
 
 	<dependencies>
+		<!--
 		<dependency>
 			<groupId>fr.univmobile</groupId>
 			<artifactId>unm-backend-core</artifactId>
 			<version>${project.version}</version>
+			<scope>test</scope>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>fr.univmobile</groupId>
 			<artifactId>unm-commons-datasource</artifactId>
-			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>fr.univmobile</groupId>
 			<artifactId>unm-backend-client-api</artifactId>
-			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>fr.univmobile</groupId>
 			<artifactId>unm-backend-client-jsonapi</artifactId>
-			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>fr.univmobile</groupId>
 			<artifactId>unm-backend-client-json</artifactId>
-			<version>${project.version}</version>
 		</dependency>
 		<!--  
 		<dependency>
