--- a/unm-mobileweb-it/pom.xml
+++ b/unm-mobileweb-it/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<groupId>fr.univmobile</groupId>
-		<artifactId>unm-it-parent</artifactId>
+		<artifactId>unm-backend-it-parent</artifactId>
 		<version>0.0.4-SNAPSHOT</version>
 		<relativePath />
 	</parent>
@@ -14,23 +14,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>fr.univmobile</groupId>
-			<artifactId>unm-it-commons</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>fr.univmobile</groupId>
-			<artifactId>unm-backend-app</artifactId>
-			<type>war</type>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>fr.univmobile</groupId>
 			<artifactId>unm-mobileweb-app</artifactId>
 			<type>war</type>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>fr.univmobile</groupId>
-			<artifactId>unm-backend-it-data</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -197,31 +182,23 @@
 			<id>dandriana</id>
 			<properties>
 				<ios.platformVersion.shouldBe>7.1</ios.platformVersion.shouldBe>
-				<cargo.containerId>tomcat7x</cargo.containerId>
-				<cargo.home>
-					/usr/local/apache-tomcat-7.0.39/
-				</cargo.home>
 			</properties>
 		</profile>
 		<profile>
 			<id>jenkins</id>
 			<properties>
-				<cargo.containerId>tomcat7x</cargo.containerId>
-				<!-- <cargo.home>/opt/apache-tomcat-7.0.39</cargo.home> -->
 			</properties>
 		</profile>
 		<profile>
 			<id>unm_ios6a</id>
 			<properties>
 				<ios.platformVersion.shouldBe>6.1</ios.platformVersion.shouldBe>
-				<cargo.home>/usr/local/apache-tomcat-7.0.39/</cargo.home>
 			</properties>
 		</profile>
 		<profile>
 			<id>unm_ios7</id>
 			<properties>
 				<ios.platformVersion.shouldBe>7.1</ios.platformVersion.shouldBe>
-				<cargo.home>/usr/local/apache-tomcat-7.0.39/</cargo.home>
 			</properties>
 		</profile>
 	</profiles>
