--- a/unm-mobileweb-it/pom.xml
+++ b/unm-mobileweb-it/pom.xml
@@ -100,7 +100,7 @@
 								</artifactItem>
 								<artifactItem>
 									<groupId>fr.univmobile</groupId>
-									<artifactId>unm-backend-app</artifactId>
+									<artifactId>unm-backend-app-noshib</artifactId>
 									<type>war</type>
 									<overWrite>true</overWrite>
 									<outputDirectory>${project.build.directory}/unm-backend-app</outputDirectory>
