--- a/unm-mobileweb-app-local/src/main/webapp/WEB-INF/web.xml
+++ b/unm-mobileweb-app-local/src/main/webapp/WEB-INF/web.xml
@@ -45,7 +45,7 @@
 			<param-value>RegionClientFromLocal</param-value>
 		</init-param>
 		<init-param>
-			<param-name>inject:String into:RegionJSONClientImpl</param-name>
+			<param-name>inject:String into:RegionClientFromLocal</param-name>
 			<param-value>(dummy baseURL)</param-value>
 		</init-param>
 		<init-param>
