Fix jsptester tests: Use selectedPoiId=xxx in YAML files for Details mockup

--- a/unm-mobileweb-app/src/test/jsptester/about-000-empty.yaml
+++ b/unm-mobileweb-app/src/test/jsptester/about-000-empty.yaml
@@ -1,3 +1,6 @@
 baseURL: ${baseURL}
 
+jsonURL: http://univmobile.vswip.com///unm-backend/json
+jsonBaseURL: http://univmobile.vswip.com/unm-backend/json
+
 #selectedUniversityId: up
