--- a/unm-mobileweb-app/src/test/jsptester/geocampus_pois-001-list.yaml
+++ b/unm-mobileweb-app/src/test/jsptester/geocampus_pois-001-list.yaml
@@ -36,7 +36,7 @@ pois:
             longitude: 2.3459243774
             url: Http://www.univ-paris1.fr/
             logo: http://admin.univmobile.fr/images/universities/logos/univ_paris1.jpg
-            image: null
+            imageUrl: null
             imageWidth: 200
             imageHeight: 100
             markerType: green
@@ -47,7 +47,7 @@ pois:
             coordinates: 48.852771456599,2.3353672027588
             latitude: 48.852771456599
             longitude: 2.3353672027588
-            image: http://admin.univmobile.fr/uploads/poi/ac1b0ae97a6a010960a9c190f7a5f519bcc2ad34.jpg
+            imageUrl: http://admin.univmobile.fr/uploads/poi/ac1b0ae97a6a010960a9c190f7a5f519bcc2ad34.jpg
             imageWidth: 200
             imageHeight: 300
             markerType: green
