Tests with jsptester

--- a/unm-mobileweb-app/src/test/jsptester/about-000-empty.yaml
+++ b/unm-mobileweb-app/src/test/jsptester/about-000-empty.yaml
@@ -1,6 +1,6 @@
 baseURL: ${baseURL}
 
-jsonURL: http://univmobile.vswip.com///unm-backend/json
-jsonBaseURL: http://univmobile.vswip.com/unm-backend/json
+jsonURL: http://localhost:8380/unm-backend/json
+jsonBaseURL: ERREUR
 
 #selectedUniversityId: up
