--- a/unm-mobileweb-app/src/test/jsptester/geocampus_pois-001-list.yaml
+++ b/unm-mobileweb-app/src/test/jsptester/geocampus_pois-001-list.yaml
@@ -41,6 +41,7 @@ pois:
             imageHeight: 100
             markerType: green
             markerIndex: A
+            commentsUrl: http://192.168.0.40:8080/unm-backend-mock/comments1
           - id: 931
             name: Centre rue du Four
             address: 13 rue du Four 75006 Paris
