--- a/unm-mobileweb-app/src/main/webapp/WEB-INF/web.xml
+++ b/unm-mobileweb-app/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,10 @@
 			<param-value>${ref:jsonURL}/pois</param-value>
 		</init-param>
 		<init-param>
+			<param-name>inject:String ref:sessionJsonURL</param-name>
+			<param-value>${ref:jsonURL}/session</param-value>
+		</init-param>
+		<init-param>
 			<param-name>inject-packages</param-name>
 			<param-value>
 				fr.univmobile.mobileweb
@@ -71,6 +75,18 @@
 		<init-param>
 			<param-name>inject:String into:HomeJSONHttpClient</param-name>
 			<param-value>${ref:jsonURL}</param-value>
+		</init-param>
+		<init-param>
+			<param-name>inject:SessionClient into:UnivMobileServlet</param-name>
+			<param-value>SessionClientFromJSON</param-value>
+		</init-param>
+		<init-param>
+			<param-name>inject:SessionJSONClient into:SessionClientFromJSON</param-name>
+			<param-value>SessionJSONHttpClient</param-value>
+		</init-param>
+		<init-param>
+			<param-name>inject:String into:SessionJSONHttpClient</param-name>
+			<param-value>${ref:sessionJsonURL}</param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
