--- a/unm-mobileweb-core/pom.xml
+++ b/unm-mobileweb-core/pom.xml
@@ -36,6 +36,10 @@
 			<groupId>fr.univmobile</groupId>
 			<artifactId>unm-backend-client-json</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>fr.univmobile</groupId>
+			<artifactId>unm-http</artifactId>
+		</dependency>
 		<!--  
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
