--- a/unm-mobileweb-it/pom.xml
+++ b/unm-mobileweb-it/pom.xml
@@ -200,12 +200,16 @@
 			<id>unm_ios6a</id>
 			<properties>
 				<ios.platformVersion.shouldBe>6.1</ios.platformVersion.shouldBe>
+				<clients_plist_source>/Users/dandriana/clients.plist</clients_plist_source>
+				<clients_plist_target>/Users/dandriana/Library/Application Support/iPhone Simulator/6.1/Library/Caches/locationd/clients.plist</clients_plist_target>
 			</properties>
 		</profile>
 		<profile>
 			<id>unm_ios7</id>
 			<properties>
 				<ios.platformVersion.shouldBe>7.1</ios.platformVersion.shouldBe>
+				<clients_plist_source>/Users/dandriana/clients.plist</clients_plist_source>
+				<clients_plist_target>/Users/dandriana/Library/Application Support/iPhone Simulator/7.1/Library/Caches/locationd/clients.plist</clients_plist_target>
 			</properties>
 		</profile>
 	</profiles>
