Add test property: appium.port

--- a/unm-mobileweb-it/src/test/resources/test.properties
+++ b/unm-mobileweb-it/src/test/resources/test.properties
@@ -1,5 +1,6 @@
 AppPath=${AppPath}
 ios.platformVersion.shouldBe=${ios.platformVersion.shouldBe}
+appium.port=${appium.port}
 
 mysql.url=${mysql.url}
 mysql.username=${mysql.username}
