Added: Notification loading and setting for user; Library redirect to filtered map; Category active and inactive icons; Login page.

--- a/unm-mobileweb-app/src/main/webapp/WEB-INF/web.xml
+++ b/unm-mobileweb-app/src/main/webapp/WEB-INF/web.xml
@@ -112,6 +112,10 @@
 			<param-name>inject:String ref:restaurationUniversitaireCategoryId</param-name>
 			<param-value>25</param-value>
 		</init-param>
+		<init-param>
+			<param-name>inject:String ref:librariesCategoryId</param-name>
+			<param-value>7</param-value>
+		</init-param>
 		
 		<load-on-startup>1</load-on-startup>
 	</servlet>
